CSS: Fix share button alignment

--- a/content/themes/asknative/assets/scss/_post.scss
+++ b/content/themes/asknative/assets/scss/_post.scss
@@ -191,7 +191,7 @@
 
 .post-footer .share a {
   display: inline-block;
-  margin: 1.4rem 1.6rem 1.6rem 0;
+  margin: 1.4rem 0 1.6rem 1.6rem;
   color: $color-muted;
   text-decoration: none;
   font-size: 1.8rem;
